--- a/playbook.yml
+++ b/playbook.yml
@@ -1,9 +1,11 @@
 ---
 - hosts: all
+  name: "Setup computer and configure stuff"
+  gather_facts: true
   vars:
     # your extra bundles here
     zsh_antigen_bundles_extras: []
     # your variables here
     # zsh_autosuggestions_bind_key: "^U"
   roles:
-    - viasite-ansible.zsh
+    - { role: "zsh-install", become: true }
