--- a/roles/zsh-install/defaults/main.yml
+++ b/roles/zsh-install/defaults/main.yml
@@ -29,23 +29,27 @@ zsh_fzf_version: 0.35.0
 
 zsh_antigen_bundles:
   - { name: command-not-found, when: "{{ ansible_os_family != 'Darwin' }}" } # too slow on OSX
-  - { name: brew, command: brew }
+  - { name: brew, command: brew, when: "{{ ansible_os_family = 'Darwin' }}" } # too slow on OSX}
   - { name: docker, command: docker }
   - { name: docker-compose, command: docker-compose }
   - fancy-ctrl-z
   - git-extras
   - gnu-utils
   - { name: httpie, command: http }
-  - { name: golang, command: go }
+  # - { name: golang, command: go }
   - { name: gulp, command: gulp }
   - { name: helm, command: helm }
-  - { name: kubectl, command: kubectl }
+  - {
+      name: kubectl,
+      command: kubectl,
+      when: "{{ ansible_os_family != 'Darwin' }}",
+    } # too slow on OSX
   - { name: pip, command: pip }
   - { name: rake, command: rake }
   - { name: symfony2, command: symfony }
   - { name: systemd, command: systemctl }
   - python
-  - { name: tmux, command: tmux }
+  - { name: tmux, command: tmux, when: "{{ ansible_os_family != 'Darwin' }}" } # too slow on OSX
   - { name: vagrant, command: vagrant }
   - { name: viasite/server-scripts, command: dbdump }
 
@@ -59,7 +63,11 @@ zsh_antigen_bundles:
       name: unixorn/autoupdate-antigen.zshplugin,
       when: "{{ zsh_update_interval > 0 }}",
     }
-  - urbainvaes/fzf-marks # replaces jump plugin, mark, jump and Ctrl+G
+  - {
+      name: urbainvaes/fzf-marks,
+      command: urbainvaes/fzf-marks,
+      when: "{{ ansible_os_family != 'Darwin' }}",
+    } # too slow on OSX # replaces jump plugin, mark, jump and Ctrl+G
   - "{{ fzf_widgets }}"
   # must be last, don't work on zsh < 4.3.17
   #- { name: zsh-users/zsh-syntax-highlighting, when: "{{ zsh_version | default(false) is version_compare('4.3.17', '>=') }}" }
