--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   company: Viasite
   description: oh-my-zsh with powerlevel9k theme, fzf and other plugins
   license: MIT
-  min_ansible_version: 2.0
+  min_ansible_version: "2.0"
   platforms:
     - name: Ubuntu
       versions:
@@ -17,10 +17,10 @@ galaxy_info:
         - jessie
     - name: EL
       versions:
-        - 7
+        - "7"
     - name: MacOSX
       versions:
-        - 10.12
+        - "10.12"
   galaxy_tags:
     - system
     - shell
