--- a/roles/zsh-install/defaults/main.yml
+++ b/roles/zsh-install/defaults/main.yml
@@ -27,50 +27,31 @@ fzf_widgets: ytet5uy4/fzf-widgets
 zsh_fzf_version: 0.35.0
 
 zsh_antigen_bundles:
-  - { name: command-not-found, when: "{{ ansible_os_family != 'Darwin' }}" }
-  - { name: brew, command: brew, when: "{{ ansible_os_family = 'Darwin' }}" }
-  - { name: docker, command: docker }
-  - { name: docker-compose, command: docker-compose }
-  - { name: fancy-ctrl-z, command: fancy-ctrl-z }
-  - { name: git-extras, command: git-extras }
-  - { name: gnu-utils, command: gnu-utils }
-  - { name: httpie, command: http }
-  # - { name: golang, command: go }
-  - { name: gulp, command: gulp }
-  - { name: helm, command: helm }
-  - {
-      name: kubectl,
-      command: kubectl,
-      when: "{{ ansible_os_family != 'Darwin' }}",
-    }
-  - { name: python, command: python }
-  - { name: pip, command: pip }
-  - { name: rake, command: rake }
-  - { name: symfony2, command: symfony }
-  - { name: systemd, command: systemctl }
-  - { name: vagrant, command: vagrant }
-  # on zsh 4.3.10 autosuggestions breaks multiline commands with \
-  - {
-      name: zsh-users/zsh-autosuggestions,
-      when: "{{ zsh_version is version_compare('5.0', '>=') }}",
-    }
-  - popstas/zsh-command-time
+  - thefuck
+  - ansible
+  - terraform
+  - fzf
+  - navi
+  - tmux
+  - autojump
+  - git
+  - git-auto-fetch
+  - git-escape-magic
+  - python
+  - pip
+  - sudo
+  - command-not-found
+  - colored-man-pages
+  - docker
+  - docker-compose
+  - zsh-users/zsh-autosuggestions
+  - zsh-users/zsh-syntax-highlighting
+  - { name: brew, command: brew, when: "{{ ansible_os_family == 'Darwin' }}" }
   - {
       name: unixorn/autoupdate-antigen.zshplugin,
       when: "{{ zsh_update_interval > 0 }}",
     }
-  - {
-      name: urbainvaes/fzf-marks,
-      command: urbainvaes/fzf-marks,
-      when: "{{ ansible_os_family != 'Darwin' }}",
-    } # too slow on OSX # replaces jump plugin, mark, jump and Ctrl+G
   - "{{ fzf_widgets }}"
-  # must be last, don't work on zsh < 4.3.17
-  #- { name: zsh-users/zsh-syntax-highlighting, when: "{{ zsh_version | default(false) is version_compare('4.3.17', '>=') }}" }
-  - {
-      name: zdharma-continuum/fast-syntax-highlighting,
-      when: "{{ zsh_version is version_compare('4.3.17', '>=') }}",
-    }
 
 zsh_antigen_bundles_extras: []
 
