--- a/roles/zsh-install/tasks/post-install.yml
+++ b/roles/zsh-install/tasks/post-install.yml
@@ -1,7 +1,7 @@
 ---
 - name: Reset antigen cache
   command: "timeout 10s /bin/zsh -c 'source {{ zsh_config }}; antigen reset'"
-  become: yes
+  become: true
   become_user: "{{ zsh_user }}"
   changed_when: false
   failed_when: false
@@ -9,7 +9,7 @@
 # it will fail, but it install all bundles for user
 - name: Update antigen bundles
   command: "timeout 30s /bin/zsh -c 'source {{ zsh_config }}; antigen update'"
-  become: yes
+  become: true
   become_user: "{{ zsh_user }}"
   changed_when: false
   failed_when: false
