--- a/roles/zsh-install/tasks/configure.yml
+++ b/roles/zsh-install/tasks/configure.yml
@@ -36,8 +36,7 @@
 
 - name: Check antigen version
   shell: |
-    set -o pipefail
-    cat "{{ zsh_antigen_path }}/antigen/VERSION" | tr -d 'v'
+    set -o pipefail; cat "{{ zsh_antigen_path }}/antigen/VERSION" | tr -d 'v'
   args:
     executable: /bin/bash
   register: zsh_register_antigen_version
