--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,11 @@
 ---
-test:
-  script:
-    - molecule test --all
+on: push
+
+jobs:
+  molecule:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          path: '${{ github.repository }}'
+      - uses: gofrolist/molecule-action@v2
