--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,10 +1,11 @@
 ---
 galaxy_info:
-  author: Stanislav Popov
-  company: Viasite
+  role_name: ansible_role_zsh_antigen
+  author: Niels
   description: oh-my-zsh with powerlevel9k theme, fzf and other plugins
+  company: Dronevlieger
   license: MIT
-  min_ansible_version: "2.0"
+  min_ansible_version: 2.0
   platforms:
     - name: Ubuntu
       versions:
@@ -17,13 +18,17 @@ galaxy_info:
         - jessie
     - name: EL
       versions:
-        - "7"
+        - '7'
     - name: MacOSX
       versions:
-        - "10.12"
+        - '10.12'
   galaxy_tags:
     - system
     - shell
     - user
     - zsh
-dependencies: []
+
+dependencies:
+  []
+  # List your role dependencies here, one per line. Be sure to remove the '[]' above,
+  # if you add dependencies to this list.
