--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,11 +1,11 @@
 ---
 galaxy_info:
   role_name: ansible_role_zsh_antigen
-  author: Niels
-  description: oh-my-zsh with powerlevel9k theme, fzf and other plugins
+  author: bruvv
+  description: oh-my-zsh with powerlevel9k theme, thefuck and other plugins
   company: Dronevlieger
   license: MIT
-  min_ansible_version: 2.0
+  min_ansible_version: '2.0'
   platforms:
     - name: Ubuntu
       versions:
