--- a/playbook.yml
+++ b/playbook.yml
@@ -4,7 +4,7 @@
   gather_facts: true
   vars:
     # your extra bundles here
-    zsh_antigen_bundles_extras: []
+    # zsh_antigen_bundles_extras: []
     # your variables here
     # zsh_autosuggestions_bind_key: "^U"
   roles:
