--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: yaml-lint
         uses: ibiqlik/action-yamllint@v3
         with:
-          config_file: .github/yamllint.yml
+          config_file: .github/yamlllint.yml
 
   molecule:
     name: Molecule
