--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: 🚀 Run yamllint
         uses: frenck/action-yamllint@v1
         with:
-          config: './.github/.yamllint.yml'
+          config: '/.github/.yamllint.yml'
           warnings: false
 
   molecule:
