--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -4,6 +4,7 @@ rules:
   document-start: disable
   new-line-at-end-of-file: disable
   line-length: disable
+  braces: disable
 # ignore: |
 
 #   # folders
