--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,20 +13,6 @@ defaults:
     working-directory: 'bruvv.zsh_antigen'
 
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the codebase.
-        uses: actions/checkout@v3
-        with:
-          path: 'bruvv.zsh_antigen'
-
-      - name: 🚀 Run yamllint
-        uses: frenck/action-yamllint@v1
-        with:
-          warnings: false
-
   molecule:
     name: Molecule
     runs-on: ubuntu-latest
@@ -35,10 +21,8 @@ jobs:
         distro:
           - rockylinux8
           - ubuntu2204
-          - ubuntu2004
-          - ubuntu1804
+          - ubunu2004
           - debian11
-          - debian10
           - fedora34
 
     steps:
