--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,4 +1,8 @@
 ---
+- name: Print all available facts
+  ansible.builtin.debug:
+    var: ansible_facts
+
 - name: Update package cache
   package:
     update_cache: true
@@ -19,7 +23,7 @@
     state: present
   # brew don't work from root user on macOS
   become: "{{ ansible_distribution != 'MacOSX' }}"
-  when: not (zsh_user == 'root') and not (ansible_facts['distribution'] == 'Rocky')
+  when: not (zsh_user == 'root') and ansible_os_family == 'Debian'
 
 - name: Installing rocky system packages
   package:
@@ -33,12 +37,12 @@
     state: present
   # brew don't work from root user on macOS
   become: "{{ ansible_distribution != 'MacOSX' }}"
-  when: not (zsh_user == 'root') and ansible_facts['distribution'] == 'Rocky'
+  when: not (zsh_user == 'root') and ansible_os_family == 'Rocky'
 
 - name: Installing rocky system packages
   ansible.builtin.pip:
     name: thefuck
-  when: not (zsh_user == 'root') and ansible_facts['distribution'] == 'Rocky'
+  when: not (zsh_user == 'root') and ansible_os_family == 'Rocky'
 
 - name: check if {{zsh_antigen_path}} exist
   stat:
