--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -37,7 +37,7 @@
     state: present
   # brew don't work from root user on macOS
   become: "{{ ansible_distribution != 'MacOSX' }}"
-  when: ansible_os_family == 'Rocky'
+  when: ansible_os_family == 'RedHat'
 
 - name: Installing rocky system packages
   ansible.builtin.pip:
