--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -5,18 +5,18 @@
 
   pre_tasks:
     - name: Update apt cache.
-      apt: update_cache=yes cache_valid_time=600
+      ansible.builtin.apt: update_cache=yes cache_valid_time=600
       when: ansible_os_family == 'Debian'
 
     - name: Wait for systemd to complete initialization. # noqa 303
-      command: systemctl is-system-running
+      ansible.builtin.command: systemctl is-system-running
       register: systemctl_status
       until: >
         'running' in systemctl_status.stdout or
         'degraded' in systemctl_status.stdout
       retries: 30
       delay: 5
-      when: ansible_service_mgr == 'systemd'
+      when: not ansible_check_mode
       changed_when: false
       failed_when: systemctl_status.rc > 1
 
