--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ name: Release
 
 defaults:
   run:
-    working-directory: 'geerlingguy.docker'
+    working-directory: 'bruvv.zsh_antigen'
 
 jobs:
   release:
@@ -23,7 +23,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: 'geerlingguy.docker'
+          path: 'bruvv.zsh_antigen'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v2
