--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,33 +1,34 @@
 ---
-- include_tasks: install.yml
-  name: Install stuff
+- name: Install stuff
+  ansible.builtin.include_tasks: install.yml
   tags:
     - zsh
     - install
 
-- include_tasks: configure.yml
-  name: Configure zsh
+- name: Configure zsh
+  ansible.builtin.include_tasks: configure.yml
   tags:
     - zsh
     - configure
 
-- include_tasks: post-install.yml
-  name: Post installation stuff
+- name: Post installation stuff
+  ansible.builtin.include_tasks: post-install.yml
   tags:
     - zsh
     - install
     - post_install
 
-- include_tasks: source-for-users-shared.yml
+- name: Enabled for more users
+  ansible.builtin.include_tasks: source-for-users-shared.yml
   tags:
     - zsh
     - install
   when: zsh_shared or zsh_source_for_all_users
 
 - name: Reset antigen cache
-  command: "timeout 10s /bin/zsh -c 'source {{ zsh_config }}; antigen reset'"
+  ansible.builtin.command: "timeout 10s /bin/zsh -c 'source {{ zsh_config }}; antigen reset'"
   become: true
-  become_user: '{{ zsh_user }}'
+  become_user: "{{ zsh_user }}"
   changed_when: false
   failed_when: false
   tags: always
