--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,12 +1,12 @@
 ---
 - name: Update package cache
-  package:
+  ansible.builtin.package:
     update_cache: true
   become: true
   when: ansible_os_family != 'MacOSX'
 
 - name: Installing debian system packages
-  package:
+  ansible.builtin.package:
     name:
       - zsh
       - tmux
@@ -21,7 +21,7 @@
   when: ansible_os_family == 'Debian'
 
 - name: Installing rocky system packages
-  package:
+  ansible.builtin.package:
     name:
       - zsh
       - tmux
@@ -35,68 +35,68 @@
   when: ansible_os_family == 'RedHat'
 
 - name: Installing rocky system packages
-  ansible.builtin.pip:
+  ansible.builtin.ansible.builtin.pip:
     name: thefuck
   when: ansible_os_family == 'RedHat'
 
-- name: check if {{zsh_antigen_path}} exist
-  stat:
-    path: '{{zsh_antigen_path}}'
+- name: Check if ntigen path exist
+  ansible.builtin.stat:
+    path: "{{ zsh_antigen_path }}"
   register: zsh_antigen_path_present
 
-- name: create direcoty {{zsh_antigen_path}}
-  become: true
-  file:
-    dest: '{{zsh_antigen_path}}'
-    mode: '0755'
+- name: Create direcoty {{ zsh_antigen_path }}
+  ansible.builtin.file:
+    dest: "{{ zsh_antigen_path }}"
+    mode: "0755"
     state: directory
+  become: true
   when: not zsh_antigen_path_present.stat.exists
 
 - name: Clone antigen {{ zsh_antigen_version }}
-  git:
+  ansible.builtin.git:
     repo: https://github.com/zsh-users/antigen.git
-    dest: '{{ zsh_antigen_path }}/antigen'
-    version: '{{ zsh_antigen_version }}'
+    dest: "{{ zsh_antigen_path }}/antigen"
+    version: "{{ zsh_antigen_version }}"
     force: true
   become: true
   # become_user: "{{ zsh_user }}"
   register: zsh_register_antigen_clone
 
 - name: Set zsh_fzf_path to /usr/local/bin
-  set_fact:
+  ansible.builtin.set_fact:
     zsh_fzf_path: /usr/local/bin
   changed_when: false
   when: zsh_shared and not (ansible_os_family == 'RedHat')
 
 - name: Set zsh_fzf_path_absolute
-  set_fact:
+  ansible.builtin.set_fact:
     zsh_fzf_path_absolute: "{{ zsh_fzf_path | replace('$HOME', '~' + zsh_user) }}"
   changed_when: false
   when: not (ansible_os_family == 'RedHat')
 
 - name: Ensure users home binary folder is present
-  file:
-    path: '{{ zsh_fzf_path_absolute }}'
-    owner: '{{ zsh_user }}'
-    group: '{{ zsh_user_group }}'
+  ansible.builtin.file:
+    path: "{{ zsh_fzf_path_absolute }}"
+    owner: "{{ zsh_user }}"
+    group: "{{ zsh_user_group }}"
     mode: u=rwx,g=rwx,o=rx
     state: directory
   when: not zsh_shared and not (ansible_os_family == 'RedHat')
 
-- name: 'Download fzf to {{ zsh_fzf_path_absolute }}'
-  unarchive:
-    src: '{{ zsh_fzf_url }}'
-    dest: '{{ zsh_fzf_path_absolute }}'
+- name: "Download fzf to {{ zsh_fzf_path_absolute }}"
+  ansible.builtin.unarchive:
+    src: "{{ zsh_fzf_url }}"
+    dest: "{{ zsh_fzf_path_absolute }}"
     remote_src: true
-    creates: '{{ zsh_fzf_path_absolute }}/fzf'
+    creates: "{{ zsh_fzf_path_absolute }}/fzf"
   become: true
   when: not (ansible_os_family == 'RedHat')
 
 - name: Set directory permissions
-  file:
-    name: '{{ zsh_antigen_path }}'
-    owner: '{{ zsh_user }}'
-    group: '{{ zsh_user_group }}'
+  ansible.builtin.file:
+    name: "{{ zsh_antigen_path }}"
+    owner: "{{ zsh_user }}"
+    group: "{{ zsh_user_group }}"
     recurse: true
   become: true
   changed_when: false
