--- a/tasks/post-install.yml
+++ b/tasks/post-install.yml
@@ -1,6 +1,6 @@
 ---
 - name: Reset antigen cache
-  command: "timeout 10s /bin/zsh -c 'source {{ zsh_config }}; antigen reset'"
+  ansible.builtin.command: "timeout 10s /bin/zsh -c 'source {{ zsh_config }}; antigen reset'"
   become: true
   become_user: "{{ zsh_user }}"
   changed_when: false
@@ -8,7 +8,7 @@
 
 # it will fail, but it install all bundles for user
 - name: Update antigen bundles
-  command: "timeout 30s /bin/zsh -c 'source {{ zsh_config }}; antigen update'"
+  ansible.builtin.command: "timeout 30s /bin/zsh -c 'source {{ zsh_config }}; antigen update'"
   become: true
   become_user: "{{ zsh_user }}"
   changed_when: false
