--- a/tasks/source-for-users-shared.yml
+++ b/tasks/source-for-users-shared.yml
@@ -1,37 +1,42 @@
 - name: Get Ubuntu/Debian users's home path
-  shell: "egrep '^.*:.*:[1-9][0-9]{3,4}:.*:.*:.*:.*(bash|zsh)$' /etc/passwd | awk -F: '{print $6}'"
+  ansible.builtin.shell: |
+    set -o pipefail
+    "egrep '^.*:.*:[1-9][0-9]{3,4}:.*:.*:.*:.*(bash|zsh)$' /etc/passwd | awk -F: '{print $6}'"
   register: paths
   when: not (ansible_os_family == 'MacOSX')
   changed_when: false
 
 - name: Get Ubuntu/Debian users
-  shell: "egrep '^.*:.*:[1-9][0-9]{3,4}:.*:.*:.*:.*(bash|zsh)$' /etc/passwd | awk -F: '{print $1}'"
+  ansible.builtin.shell: |
+    set -o pipefail
+    "egrep '^.*:.*:[1-9][0-9]{3,4}:.*:.*:.*:.*(bash|zsh)$' /etc/passwd | awk -F: '{print $1}'"
   register: zsh_users
   when: not (ansible_os_family == 'MacOSX') and paths is defined and paths.stdout != ""
   changed_when: false
 
 - name: Format user list
-  set_fact:
-    zsh_list_users: "{{['root','root'] + zsh_users.stdout.splitlines()| list}}"
+  ansible.builtin.set_fact:
+    zsh_list_users: "{{ ['root', 'root'] + zsh_users.stdout.splitlines() | list }}"
   when: not (ansible_os_family == 'MacOSX') and paths is defined and paths.stdout != ""
 
 - name: Merge the users path and root/skel to list
-  set_fact:
-    allpaths: "{{ ['/root','/etc/skel'] + paths.stdout.splitlines()| list }}"
+  ansible.builtin.set_fact:
+    allpaths: "{{ ['/root', '/etc/skel'] + paths.stdout.splitlines() | list }}"
   when: zsh_shared and paths is defined and paths.stdout != ""
+
 - name: Use only root/skel for the list (no users found)
-  set_fact:
-    allpaths: "{{ ['/root','/etc/skel']}}"
+  ansible.builtin.set_fact:
+    allpaths: "{{ ['/root', '/etc/skel'] }}"
   when: paths is defined and paths.stdout == ""
 
-- name: Install .zshrc in {{allpaths | join(',')}}
-  become: true
-  copy:
+- name: Install .zshrc in {{ allpaths | join(',') }}
+  ansible.builtin.copy:
     content: source /usr/share/zsh-config/.zshrc
-    dest: '{{item}}/.zshrc'
-    owner: "{{zsh_list_users[id]| default('root')}}"
-    mode: '0644'
-  loop: '{{allpaths}}'
+    dest: "{{ item }}/.zshrc"
+    owner: "{{ zsh_list_users[id] | default('root') }}"
+    mode: "0644"
+  loop: "{{ allpaths }}"
   loop_control:
     index_var: id
+  become: true
   when: allpaths is defined
