fix multi user setup

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,7 +20,10 @@
 
 - name: Enabled for more users
   ansible.builtin.include_tasks: source-for-users-shared.yml
-  when: zsh_shared or zsh_source_for_all_users
+  tags:
+    - zsh
+    - install
+  when: zsh_shared or zsh_source_for_all_users and not (ansible_os_family == 'MacOSX')
 
 - name: Reset antigen cache
   ansible.builtin.command: "timeout 10s /bin/zsh -c 'source {{ zsh_config }}; antigen reset'"
