--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,16 @@
 ---
 name: CI
-'on':
+"on":
   pull_request:
   push:
     branches:
       - main
   schedule:
-    - cron: '0 7 * * 0'
+    - cron: "0 7 * * 0"
 
 defaults:
   run:
-    working-directory: 'bruvv.zsh_antigen'
+    working-directory: "bruvv.zsh_antigen"
 
 jobs:
   molecule:
@@ -19,6 +19,8 @@ jobs:
     strategy:
       matrix:
         distro:
+          - macos-latest
+          - rockylinux9
           - rockylinux8
           - ubuntu2204
           - debian11
@@ -27,12 +29,12 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v3
         with:
-          path: 'bruvv.zsh_antigen'
+          path: "bruvv.zsh_antigen"
 
       - name: Set up Python 3.
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: "3.x"
 
       - name: Install test dependencies.
         run: pip3 install ansible molecule[docker] docker
@@ -40,6 +42,6 @@ jobs:
       - name: Run Molecule tests.
         run: molecule test
         env:
-          PY_COLORS: '1'
-          ANSIBLE_FORCE_COLOR: '1'
+          PY_COLORS: "1"
+          ANSIBLE_FORCE_COLOR: "1"
           MOLECULE_DISTRO: ${{ matrix.distro }}
