--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -5,8 +5,16 @@
 
   pre_tasks:
     - name: Update apt cache.
-      ansible.builtin.apt: update_cache=yes cache_valid_time=600
+      ansible.builtin.apt:
+        update_cache: true
+        cache_valid_time: 600
+        upgrade: true
       when: ansible_os_family == 'Debian'
+
+    - name: Update apt cache.
+      ansible.builtin.dnf:
+        update_cache: true
+      when: ansible_os_family == 'RedHat'
 
     - name: Wait for systemd to complete initialization. # noqa 303
       ansible.builtin.command: systemctl is-system-running
