--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -24,7 +24,7 @@
         'degraded' in systemctl_status.stdout
       retries: 30
       delay: 5
-      when: not ansible_check_mode
+      when: not ansible_check_mode and not (ansible_os_family == 'MacOS')
       changed_when: false
       failed_when: systemctl_status.rc > 1
 
