make sure not to run systemd wait on macos

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -24,7 +24,7 @@
         'degraded' in systemctl_status.stdout
       retries: 30
       delay: 5
-      when: not ansible_check_mode and not (ansible_os_family == 'MacOSX')
+      when: not ansible_check_mode or ansible_os_family != 'MacOSX'
       changed_when: false
       failed_when: systemctl_status.rc > 1
 
