--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,12 +5,13 @@ galaxy_info:
   description: oh-my-zsh with powerlevel10k theme, thefuck and other plugins
   company: Dronevlieger
   license: license (BSD, MIT)
-  min_ansible_version: '2.10'
+  min_ansible_version: "2.10"
   platforms:
     - name: EL
       versions:
-        - '7'
-        - '8'
+        - "7"
+        - "8"
+        - "9"
     - name: Debian
       versions:
         - buster
@@ -22,7 +23,7 @@ galaxy_info:
         - jammy
     - name: MacOSX
       versions:
-        - '10.12'
+        - "10.12"
   galaxy_tags:
     - system
     - shell
