--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,11 +44,12 @@ jobs:
           ANSIBLE_FORCE_COLOR: "1"
           MOLECULE_DISTRO: ${{ matrix.distro }}
 
-      - name: Get the version name from the tags
-        run: echo "RELEASE_VERSION=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
 
-      - name: Injecting a dynamic Collection version
+      - name: Build and Deploy Collection
         uses: artis3n/ansible_galaxy_collection@v2
         with:
           api_key: "${{ secrets.GALAXY_API_KEY }}"
-          galaxy_version: "${{ env.RELEASE_VERSION }}"
