--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,8 +48,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Get the version name from the tags
+        run: echo "RELEASE_VERSION=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
 
+      - name: Injecting a dynamic Collection version
+        uses: artis3n/ansible_galaxy_collection@v2
+        with:
+          api_key: "${{ secrets.GALAXY_API_KEY }}"
+          galaxy_version: "${{ env.RELEASE_VERSION }}"
       - name: Build and Deploy Collection
         uses: artis3n/ansible_galaxy_collection@v2
         with:
           api_key: "${{ secrets.GALAXY_API_KEY }}"
+          collection_dir: "meta"
