--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,21 +43,6 @@ jobs:
           PY_COLORS: "1"
           ANSIBLE_FORCE_COLOR: "1"
           MOLECULE_DISTRO: ${{ matrix.distro }}
-
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Get the version name from the tags
-        run: echo "RELEASE_VERSION=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
-
-      - name: Injecting a dynamic Collection version
-        uses: artis3n/ansible_galaxy_collection@v2
+      - uses: phish108/autotag-action@1.1.53
         with:
-          api_key: "${{ secrets.GALAXY_API_KEY }}"
-          galaxy_version: "${{ env.RELEASE_VERSION }}"
-      - name: Build and Deploy Collection
-        uses: artis3n/ansible_galaxy_collection@v2
-        with:
-          api_key: "${{ secrets.GALAXY_API_KEY }}"
-          collection_dir: "meta"
+          github-token: ${{ secrets.GITHUB_TOKEN}}
