--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,3 +42,11 @@ jobs:
           PY_COLORS: "1"
           ANSIBLE_FORCE_COLOR: "1"
           MOLECULE_DISTRO: ${{ matrix.distro }}
+  tag:
+    needs: molecule
+    runs-on: ubuntu-latest
+    steps:
+      - uses: phish108/autotag-action@1.1.53
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN}}
+          with-v: true
