--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,8 @@ jobs:
     needs: molecule
     runs-on: ubuntu-latest
     steps:
+      - name: checkout
+        uses: actions/checkout@v2
       - uses: phish108/autotag-action@1.1.53
         with:
           github-token: ${{ secrets.GITHUB_TOKEN}}
