--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,10 @@ jobs:
     strategy:
       matrix:
         distro:
-          # - rockylinux9
-          # - rockylinux8
+          - rockylinux9
+          - rockylinux8
           - ubuntu2204
-          # - debian11
+          - debian11
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v3
@@ -36,12 +36,14 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           pip3 install ansible docker 'molecule[docker]' ansible-lint yamllint flake8
+
       - name: Run Molecule tests.
         run: molecule test
         env:
           PY_COLORS: "1"
           ANSIBLE_FORCE_COLOR: "1"
           MOLECULE_DISTRO: ${{ matrix.distro }}
+
   release:
     needs: molecule
     runs-on: ubuntu-latest
