--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,17 +22,16 @@ zsh_path:
 
 zsh_load_etc_profile: yes
 
-fzf_widgets: ytet5uy4/fzf-widgets
+fzf_widgets: sorenson-axial/fzf-widgets
 
 zsh_antigen_version: master
-zsh_fzf_version: 0.35.0
+zsh_fzf_version: 0.42.0
 
 zsh_antigen_bundles:
   - thefuck
   - ansible
   - terraform
   - navi
-  - tmux
   - autojump
   - git
   - git-auto-fetch
