--- a/tasks/post-install.yml
+++ b/tasks/post-install.yml
@@ -14,12 +14,13 @@
   failed_when: false
 
 - name: Create cache dirs
-  file:
+  ansible.builtin.file:
     path: "{{ item }}"
     state: directory
-    recurse: yes
+    recurse: true
     owner: "{{ zsh_user }}"
     group: "{{ zsh_user }}"
-  become: yes
+  become: true
+  become_user: "{{ zsh_user }}"
   with_items:
     - "{{ zsh_antigen_path }}/bundles/robbyrussell/oh-my-zsh/cache/completions"
